# MRPC-2025-homework

code/: README.md
code/src/quadrotor_df/: CMakeLists.txt  package.xml
code/src/quadrotor_df/src/: df_node.cpp
code/src/quadrotor_simulator/so3_control/: CMakeLists.txt
code/src/quadrotor_simulator/so3_control/config/: gains.yaml  gains_hummingbird.yaml
code/src/quadrotor_simulator/so3_control/include/so3_control/: ImprovedSO3Control.h
code/src/quadrotor_simulator/so3_control/src/: ImprovedSO3Control.cpp  control_data.txt  control_timedata.txt  so3_control_nodelet.cpp
code/src/quadrotor_simulator/so3_quadrotor_simulator/src/dynamics/: Quadrotor.cpp
code/src/trajectory_generator/: CMakeLists.txt  IMPROVEMENTS.md
code/src/trajectory_generator/include/: Astar_searcher.h  minimum_snap_trajectory.h  rrt_star_searcher.h
code/src/trajectory_generator/launch/: demo_improved.launch
code/src/trajectory_generator/launch/rviz_config/: demo.rviz
code/src/trajectory_generator/src/: Astar_searcher.cpp  minimum_snap_trajectory.cpp  rrt_star_searcher.cpp  trajectory_generator_improved.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
documents/: homework.md
else/: 1.py
solutions/: df_quaternion.csv  result.txt
